# mls-tls-protocol

./: .gitignore  Cargo.toml  REUSE.toml
src/: authentication.rs  handshake.rs  lib.rs
src/authentication/: leaf_certificate.rs  mod.rs  root_certificate.rs  tests.rs
src/encryption_provider/: builder.rs  mod.rs  tests.rs  update_policy.rs
src/mls_handshake/: messages.rs  mod.rs  openmls_provider.rs  persistence.rs
src/mls_handshake/state_machine/: client.rs  mls_group.rs  mod.rs  server.rs  tests.rs
src/pre_handshake/: mod.rs  psk.rs  x25519.rs
src/tls_aead/: codec.rs  key_generation.rs  mod.rs  stream_sink.rs
