# SPDX-FileCopyrightText: 2024 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "mls-tls-protocol"
version = "0.1.1"
edition = "2021"

[dependencies]
openmls = { version = "0.6.0", features = [
    "test-utils",
], git = "https://github.com/openmls/openmls", rev = "302a096d7b1ae9a87d400398c98049ebc204fb52" }
openmls_rust_crypto = { version = "0.3.0", git = "https://github.com/openmls/openmls", rev = "302a096d7b1ae9a87d400398c98049ebc204fb52" }
openmls_sqlite_storage = { version = "0.1", git = "https://github.com/openmls/openmls", rev = "302a096d7b1ae9a87d400398c98049ebc204fb52" }
openmls_traits = { version = "0.3.0", git = "https://github.com/openmls/openmls", rev = "302a096d7b1ae9a87d400398c98049ebc204fb52" }
openmls_basic_credential = { version = "0.3.0", git = "https://github.com/openmls/openmls", rev = "302a096d7b1ae9a87d400398c98049ebc204fb52" }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
rand_core = "0.6.4"
chrono = "0.4.39"
tokio-util = { version = "0.7.13", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
futures = "0.3"
rand_chacha = "0.3"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
refinery = "0.8"
x25519-dalek = "2.0.1"
trait-variant = "0.1.2"


[dev-dependencies]
tracing-subscriber = "0.3.19"
