# SPDX-FileCopyrightText: 2024 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "mls-tls-protocol"
version = "0.1.1"
edition = "2021"

[dependencies]
apqmls = { version = "0.1.0", git = "https://github.com/phnx-im/apqmls" }
openmls = { features = [
    "test-utils",
    "extensions-draft-08",
], git = "https://github.com/openmls/openmls" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls" }
openmls_sqlite_storage = { git = "https://github.com/openmls/openmls", features = [
    "extensions-draft-08",
] }
openmls_traits = { git = "https://github.com/openmls/openmls", features = [
    "extensions-draft-08",
] }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", features = [
    "clonable",
] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
chrono = "0.4.39"
tokio-util = { version = "0.7.13", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
futures = "0.3"
tracing = "0.1"
rusqlite = { version = "0.37", features = ["bundled", "uuid"] }
refinery = "0.9"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
trait-variant = "0.1.2"
tls_codec = "0.4.2"

[patch."https://github.com/openmls/openmls.git"]
# feat: Post-Quantum Cryptography support (ML-KEM + ML-DSA)
# <https://github.com/openmls/openmls/pull/1994>
openmls = { git = "https://github.com/boxdot/openmls.git", rev = "c71df9295f54c7fba9b56451a06edbba96bf651e" }
openmls_basic_credential = { git = "https://github.com/boxdot/openmls.git", rev = "c71df9295f54c7fba9b56451a06edbba96bf651e" }
openmls_rust_crypto = { git = "https://github.com/boxdot/openmls.git", rev = "c71df9295f54c7fba9b56451a06edbba96bf651e" }
openmls_traits = { git = "https://github.com/boxdot/openmls.git", rev = "c71df9295f54c7fba9b56451a06edbba96bf651e" }
openmls_memory_storage = { git = "https://github.com/boxdot/openmls.git", rev = "c71df9295f54c7fba9b56451a06edbba96bf651e" }


[dev-dependencies]
tracing-subscriber = "0.3.19"
